# descartes

./: .gitignore  descartes.opam  dune-project  flake.nix
.github/workflows/: ci.yaml
lib/: charset.ml  diagnostic.ml  dune  format.ml  format.mli  label.ml  report.ml  types.ml  write.ml
test/: dune
